feat(usm): add relative sharing options [WIP]

--- a/i18n/en-US.properties
+++ b/i18n/en-US.properties
@@ -125,7 +125,7 @@ boxui.share.sharedLinkSettings.directDownloadBlockedByMaliciousContent = Downloa
 # Title for Direct Link section
 boxui.share.sharedLinkSettings.directLinkLabel = Direct Link
 # Label for option to enable expiration on a shared link
-boxui.share.sharedLinkSettings.expirationLabel = Disable Shared Link on
+boxui.share.sharedLinkSettings.expirationLabel = Enable Expiration
 # Title for Link Expiration section
 boxui.share.sharedLinkSettings.expirationTitle = Link Expiration
 # Notice shown at top of modal when one or more settings are unavailable due to permission settings
